# rest-album-of-songs

./: README.md  pyproject.toml
rest_album_of_songs/: Dockerfile  data.json  entrypoint.sh  manage.py  requirements.txt
rest_album_of_songs/music/: admin.py  models.py  serializers.py  views.py
rest_album_of_songs/music/migrations/: 0001_initial.py  0002_alter_albumsong_unique_together.py  0003_alter_albumsong_unique_together.py  0004_alter_albumsong_track_number_in_album.py  0005_alter_albumsong_unique_together.py
rest_album_of_songs/rest_album_of_songs/: asgi.py  settings.py  urls.py  wsgi.py
