[tool.poetry]
name = "rest-album-of-songs"
version = "0.1.0"
description = ""
authors = ["A-V-tor <avtorca4@gmail.com>"]
readme = "README.md"
packages = [{include = "rest_album_of_songs"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.5"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.4"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
